--- a/Example/IORequestable/Base.lproj/Main.storyboard
+++ b/Example/IORequestable/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,18 +14,46 @@
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="IORequestable_Example" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="JB6-Pe-K66">
+                                <rect key="frame" x="16" y="28" width="343" height="304"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="750" constant="304" id="0gO-s7-YKU"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8UO-ZS-Z9G">
+                                <rect key="frame" x="109" y="360" width="157" height="30"/>
+                                <state key="normal" title="iTunesAPI.SearchItems"/>
+                                <connections>
+                                    <action selector="clickedITunesSearchItems:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="GmJ-s9-o8o"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="JB6-Pe-K66" firstAttribute="top" secondItem="CVO-cp-aRa" secondAttribute="top" constant="8" id="58I-mk-f2o"/>
+                            <constraint firstItem="8UO-ZS-Z9G" firstAttribute="top" secondItem="JB6-Pe-K66" secondAttribute="bottom" constant="28" id="I3S-yA-nI9"/>
+                            <constraint firstItem="CVO-cp-aRa" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="8UO-ZS-Z9G" secondAttribute="bottom" id="SLb-Cu-jQy"/>
+                            <constraint firstItem="CVO-cp-aRa" firstAttribute="trailing" secondItem="JB6-Pe-K66" secondAttribute="trailing" constant="16" id="ecN-NO-MT4"/>
+                            <constraint firstItem="8UO-ZS-Z9G" firstAttribute="centerX" secondItem="CVO-cp-aRa" secondAttribute="centerX" id="gyJ-pJ-Zp6"/>
+                            <constraint firstItem="JB6-Pe-K66" firstAttribute="leading" secondItem="CVO-cp-aRa" secondAttribute="leading" constant="16" id="xBU-Qm-LSj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CVO-cp-aRa"/>
                     </view>
+                    <connections>
+                        <outlet property="textView" destination="JB6-Pe-K66" id="rbx-FH-KFh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="141.59999999999999" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
