--- a/Example/IORequestable/Base.lproj/Main.storyboard
+++ b/Example/IORequestable/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -28,21 +28,39 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8UO-ZS-Z9G">
-                                <rect key="frame" x="109" y="360" width="157" height="30"/>
-                                <state key="normal" title="iTunesAPI.SearchItems"/>
-                                <connections>
-                                    <action selector="clickedITunesSearchItems:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="GmJ-s9-o8o"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="vy0-ue-Fd7">
+                                <rect key="frame" x="92" y="350" width="190" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8UO-ZS-Z9G">
+                                        <rect key="frame" x="0.0" y="0.0" width="190" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="wx8-ze-8KL"/>
+                                        </constraints>
+                                        <state key="normal" title="iTunesAPI.SearchItems"/>
+                                        <connections>
+                                            <action selector="clickedITunesSearchItems:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="GmJ-s9-o8o"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vDP-IL-H8h">
+                                        <rect key="frame" x="0.0" y="30" width="190" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="xjU-k7-E9X"/>
+                                        </constraints>
+                                        <state key="normal" title="iTunesAPI.SearchItems (Rx)"/>
+                                        <connections>
+                                            <action selector="clickedITunesSearchItemRx:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Mlh-5G-cDN"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="JB6-Pe-K66" firstAttribute="top" secondItem="CVO-cp-aRa" secondAttribute="top" constant="8" id="58I-mk-f2o"/>
-                            <constraint firstItem="8UO-ZS-Z9G" firstAttribute="top" secondItem="JB6-Pe-K66" secondAttribute="bottom" constant="28" id="I3S-yA-nI9"/>
-                            <constraint firstItem="CVO-cp-aRa" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="8UO-ZS-Z9G" secondAttribute="bottom" id="SLb-Cu-jQy"/>
+                            <constraint firstItem="vy0-ue-Fd7" firstAttribute="centerX" secondItem="CVO-cp-aRa" secondAttribute="centerX" id="5ro-u6-Tml"/>
+                            <constraint firstItem="vy0-ue-Fd7" firstAttribute="top" secondItem="JB6-Pe-K66" secondAttribute="bottom" constant="18" id="YTz-GJ-rk6"/>
                             <constraint firstItem="CVO-cp-aRa" firstAttribute="trailing" secondItem="JB6-Pe-K66" secondAttribute="trailing" constant="16" id="ecN-NO-MT4"/>
-                            <constraint firstItem="8UO-ZS-Z9G" firstAttribute="centerX" secondItem="CVO-cp-aRa" secondAttribute="centerX" id="gyJ-pJ-Zp6"/>
+                            <constraint firstItem="CVO-cp-aRa" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="vy0-ue-Fd7" secondAttribute="bottom" id="vjs-Za-Wqx"/>
                             <constraint firstItem="JB6-Pe-K66" firstAttribute="leading" secondItem="CVO-cp-aRa" secondAttribute="leading" constant="16" id="xBU-Qm-LSj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="CVO-cp-aRa"/>
